--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
       - develop
       - master
       - "release/*"
+      - sync_test_run
 jobs:
   determine_docker_org_and_tag:
     runs-on: ubuntu-latest
