--- a/carma-messenger-core/Dockerfile
+++ b/carma-messenger-core/Dockerfile
@@ -12,10 +12,10 @@
 #  License for the specific language governing permissions and limitations under
 #  the License.
 ARG DOCKER_ORG="usdotfhwastoldev"
-ARG DOCKER_TAG="develop-humble"
+ARG DOCKER_TAG="sync_test_run-humble"
 FROM ${DOCKER_ORG}/carma-base:${DOCKER_TAG} as base_image
 FROM base_image as setup
-ARG GIT_BRANCH="develop"
+ARG GIT_BRANCH="sync_test_run"
 
 RUN mkdir ~/src
 COPY --chown=carma . /home/carma/src/
