--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,7 @@ jobs:
       docker_image_tag: ${{ steps.docker-org-and-tag.outputs.docker_image_tag }}
     steps:
       - id: docker-org-and-tag
-        uses: usdot-fhwa-stol/actions/docker-org-and-tag@main
+        uses: usdot-fhwa-stol/actions/docker-org-and-tag@fix-docker-org-and-tag-for-tag-events
         with:
           docker_tag_suffix: humble
   build:
